1st completion of all files

--- a/9-Capstone_Project/FinalProject/Culture venues clustering in Toulouse.ipynb
+++ b/9-Capstone_Project/FinalProject/Culture venues clustering in Toulouse.ipynb
@@ -22,7 +22,10 @@
     "\n",
     "All project files are hosted on my dedicated [Github page](https://github.com/vanAkim/IBM_Data_Science_Professional_Certificate/tree/main/9-Capstone_Project/FinalProject).  \n",
     "\n",
-    "The report is embedded in the [README file](https://github.com/vanAkim/IBM_Data_Science_Professional_Certificate/blob/main/9-Capstone_Project/FinalProject/README.md), named as such to get better readability on Github repository page."
+    "The report is embedded in the [README file](https://github.com/vanAkim/IBM_Data_Science_Professional_Certificate/blob/main/9-Capstone_Project/FinalProject/README.md), named as such to get better readability on Github repository page. This report is focusing on the main steps to get all the data science workflow and presents most valuable blocks of the full analysis.\n",
+    "\n",
+    "The full analysis is present in this notebook.  \n",
+    "**Important : in this notebook, many maps are rendered through Folium framework, and can't be viewed on Github preview page. Thus, it's better to see it with [Nbviewer service](https://nbviewer.jupyter.org/github/vanAkim/IBM_Data_Science_Professional_Certificate/blob/main/9-Capstone_Project/FinalProject/Culture%20venues%20clustering%20in%20Toulouse.ipynb).**"
    ]
   },
   {
@@ -662,7 +665,7 @@
      "end_time": "2020-12-14T16:10:36.364195Z",
      "start_time": "2020-12-14T16:10:36.194165Z"
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -5265,18 +5268,6 @@
    "source": [
     "**This even more disappointing analysis shows nothing more than what has already been explained. Unfortunately, pedestrian flow counts doesn't suit well with Foursquare cultural venues dataset in order to find some clusters.**"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
