Add pres url in MDs

--- a/9-Capstone_Project/FinalProject/Culture venues clustering in Toulouse.ipynb
+++ b/9-Capstone_Project/FinalProject/Culture venues clustering in Toulouse.ipynb
@@ -25,7 +25,9 @@
     "The report is embedded in the [README file](https://github.com/vanAkim/IBM_Data_Science_Professional_Certificate/blob/main/9-Capstone_Project/FinalProject/README.md), named as such to get better readability on Github repository page. This report is focusing on the main steps to get all the data science workflow and presents most valuable blocks of the full analysis.\n",
     "\n",
     "The full analysis is present in this notebook.  \n",
-    "**Important : in this notebook, many maps are rendered through Folium framework, and can't be viewed on Github preview page. Thus, it's better to see it with [Nbviewer service](https://nbviewer.jupyter.org/github/vanAkim/IBM_Data_Science_Professional_Certificate/blob/main/9-Capstone_Project/FinalProject/Culture%20venues%20clustering%20in%20Toulouse.ipynb).**"
+    "**Important : in this notebook, many maps are rendered through Folium framework, and can't be viewed on Github preview page. Thus, it's better to see it with [Nbviewer service](https://nbviewer.jupyter.org/github/vanAkim/IBM_Data_Science_Professional_Certificate/blob/main/9-Capstone_Project/FinalProject/Culture%20venues%20clustering%20in%20Toulouse.ipynb).**\n",
+    "\n",
+    "A wrapped presentation of this report is available [here](https://vanakim.github.io/IBM_Data_Science_Professional_Certificate/9-Capstone_Project/FinalProject/Presentation.slides.html#/)."
    ]
   },
   {
